--- a/public/global.css
+++ b/public/global.css
@@ -10,3 +10,15 @@ body {
 * {
   box-sizing: border-box;
 }
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
